--- a/src/components/SoberLiving/SoberLiving.css
+++ b/src/components/SoberLiving/SoberLiving.css
@@ -23,7 +23,7 @@
   .SoberLiving .SoberLiving-content {
     display: block;
     position: absolute;
-    top: 35%;
+     bottom: 35%;
     padding: 1rem;
 }
 
