--- a/src/components/Location-Huntington-Beach/HuntingtonBeach.css
+++ b/src/components/Location-Huntington-Beach/HuntingtonBeach.css
@@ -3,7 +3,7 @@
 .HuntingtonBeach {
     width: 100%;
     height: 80vh;
-    background: rgba(24, 23, 24, 0.651);
+    background: rgba(27, 27, 27, 0.418);
     position: relative;
   }
   
@@ -26,7 +26,7 @@
 .HuntingtonBeach .HuntingtonBeach-content {
     display: block;
     position: absolute;
-    top: 40%;
+    bottom: 20%;
     padding: 1rem;
 }
 
