--- a/src/components/section4/ImageSlider.css
+++ b/src/components/section4/ImageSlider.css
@@ -72,11 +72,11 @@
   .image-slider img {
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0px -2px 20px -1px rgba(255, 255, 255, 0.400);
+    /* box-shadow: 0px -2px 20px -1px rgba(255, 255, 255, 0.400);
     -webkit-box-shadow: 0px -2px 20px -1px rgba(255, 255, 255, 0.400);
-    -moz-box-shadow: 0px -2px 20px -1px rgba(255, 255, 255, 0.400);
+    -moz-box-shadow: 0px -2px 20px -1px rgba(255, 255, 255, 0.400); */
     padding: .1rem;
-    background-color: white;
+    background-color: rgba(238, 166, 10, 0.329);
   
   }
 
