--- a/src/components/Location-Huntington-Beach/HuntingtonBeach.css
+++ b/src/components/Location-Huntington-Beach/HuntingtonBeach.css
@@ -37,11 +37,14 @@
     text-align: center;
 }
 
-.HuntingtonBeach h3 {
+.HuntingtonBeach h2 {
     color: white;
     font-size: 1.5rem;
     font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    font-weight: normal;
 }
+
 
 /* MEDIA QUERIES */
 
@@ -51,7 +54,7 @@
     font-size: 2rem;
 }
 
-.HuntingtonBeach h3 {
+.HuntingtonBeach h2 {
     font-size: 1rem;
 }
 
