--- a/src/components/MH-BipolarDisorder/BipolarDisorderSection.css
+++ b/src/components/MH-BipolarDisorder/BipolarDisorderSection.css
@@ -12,7 +12,7 @@
 .bipolar-section:before {
   content: '';
   position: absolute;
-  background: url('../../assets/bg1.jpg') no-repeat center center/cover;
+  background: url('../../assets/bg1.webp') no-repeat center center/cover;
   height: 100%;
   width: 100%;
   z-index: -1;
