--- a/src/components/SoberLiving/SoberLivingSection.css
+++ b/src/components/SoberLiving/SoberLivingSection.css
@@ -14,7 +14,7 @@
   .soberLivingSection:before {
     content: '';
     position: absolute;
-    background: url('../../assets/bg1.jpg') no-repeat center center/cover;
+    background: url('../../assets/bg1.webp') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
