--- a/src/components/services/ServicesSection.css
+++ b/src/components/services/ServicesSection.css
@@ -14,7 +14,7 @@
   .sectionbg:before {
     content: '';
     position: absolute;
-    background: url('../../assets/bg1.jpg') no-repeat center center/cover;
+    background: url('../../assets/bg1.webp') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
@@ -52,7 +52,7 @@
     font-size: 1rem;
     padding: 1rem 0;
     letter-spacing: 5px;
-    color: rgb(253, 146, 5);
+    color: rgb(9, 169, 243);
 }
 
 .servicesSection-content h2 {
@@ -76,8 +76,8 @@
 }
 
 .servicesSection-icon {
-    font-size: 1.2rem;
-    color: rgb(253, 146, 5);
+    font-size: 1rem;
+    color: rgb(9, 169, 243);
 }
 
 
