--- a/src/components/Location-Huntington-Beach/HuntingtonBeach.css
+++ b/src/components/Location-Huntington-Beach/HuntingtonBeach.css
@@ -2,7 +2,7 @@
 
 .HuntingtonBeach {
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     background: rgba(27, 27, 27, 0.418);
     position: relative;
   }
@@ -11,7 +11,7 @@
     content: '';
     position: absolute;
     background: url('../../assets/menu-bg-huntington-beach-min.webp') no-repeat center center/cover;
-    height: 80vh;
+    height: 100%;
     width: 100%;
     z-index: -1;
   }
